--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Karl Broman
+title : Hsueh-tung Chang
 author :
-  name : Karl Broman
-  email : kbroman@gmail.com
-  github : kbroman
-  twitter : kwbroman
+  name : Hsueh-tung Chang
+  email : htchang@smail.nju.edu.cn
+  github : nkburridge
+  twitter : nil
   feedburner : nil
 
-production_url : https://kbroman.github.io
+production_url : https://nkburridge.github.io
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
